<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.home.home_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.denzcoskun.imageslider.ImageSlider
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:corner_radius="10"
                app:delay="5000"
                app:auto_cycle="true"
                android:id="@+id/slider"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About"
                android:layout_marginTop="36dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutcolg"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@string/bold"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Mathematics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Computer"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="English"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Chemistry"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Physics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                        </LinearLayout>



                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="36dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/colgname"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mnnit"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/colglocation"
                    />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>